# strict-suite

./: .gitignore  CHANGELOG-history.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  cleanup-guard.yml  no-ai-attribution.yml  prose-dash-gate.yml  publish.yml  ruff.yml  stricts.yml
docs/: CONFORMANCE.md  README.md
docs/strict_module/: CHANGELOG-history.md
docs/strict_module/architecture/: flow-trace.md
docs/strict_module/audits/: 2026-07-13-full-corpus-conformance-audit.md  cli-audit.md  config-layer-audit.md  linter-rules-engine-audit.md  loc-cap-subcommand-audit.md
docs/strict_module/reviews/: cli-review.md  config-layer-review.md  linter-rules-engine-review.md  loc-cap-subcommand-review.md
strict_checkers/: __init__.py  base.py  r001.py  r002.py  r003.py  r004.py  r005.py  r006.py  r007.py  r008.py  r009.py  r010.py  r011.py  r012.py  r013.py  r014.py  r015.py
strict_checkers/tests/: conftest.py  test_baseline_ratchet.py  test_compat_fallback.py  test_config_loading.py  test_coverage_checkers_comprehensive.py  test_coverage_edge_cases.py  test_coverage_edge_cases_extended.py  test_coverage_negative_control.py  test_github_format.py  test_loc_cap.py  test_loc_cap_test_exemption.py  test_noqa.py  test_r001_dict_str_any.py  test_r001_strict_collections.py  test_r002_annotated_constants.py  test_r002_configurable_threshold.py  test_r002_inline_dict.py  test_r002_justification.py  test_r002_multiple_dataclass_regression.py  test_r002_serializer_exemption.py  test_r002_tag_separator_format.py  test_r003_canonical.py  test_r003_dataclass_trio.py  test_r003_strict_relaxed.py  test_r004_auto_detect.py  test_r004_module_facade.py  test_r005_validator_pattern.py  test_r006_any.py  test_r007_fixtures.py  test_r008_test_functions.py  test_r009_module_functions.py  test_r010_legacy_typing.py  test_r011_raise_literals.py  test_r012_r013_r014_r015.py  test_r013_r014_r015_adversarial_fixtures.py  test_service_test_exemption.py  test_suppression_surface.py
strict_checkers/tests/fixtures/bad/: r001_bad_kwarg_dict_str_any.py  r001_bad_vararg_dict_str_any.py  r002_bad_non_serializer.py  r005_bad_validator.py  r009_module_function_outside_entry_point.py  test_r007_bare_fixture_decorator.py
strict_checkers/tests/fixtures/good/: r002_multiple_dataclass_serializers.py  r010_modern_abc_imports.py
strict_config/: __init__.py  _config.py  _version.py
strict_inspection/: __init__.py  annotations_client.py  paths_client.py
strict_linter/: __init__.py  linter_client.py  linter_objects.py
strict_loc_cap/: __init__.py  loc_cap_client.py
strict_module/: __init__.py  checkers.py  cli.py  constants.py  linter.py  loc_cap.py  rules.py
strict_module/checkers/: __init__.py  base.py  r001.py  r002.py  r003.py  r004.py  r005.py  r006.py  r007.py  r008.py  r009.py  r010.py  r011.py
strict_module/config/: __init__.py  _config.py  _version.py
strict_module/inspection/: __init__.py  annotations_client.py
strict_module/linter/: __init__.py  linter_client.py
strict_module/loc_cap/: __init__.py  loc_cap_client.py  loc_cap_objects.py
strict_module/rules/: __init__.py  rules_client.py  rules_objects.py
strict_module/tests/: conftest.py  test_baseline_ratchet.py  test_cli.py  test_cli_main_entry.py  test_cli_real_invocations.py  test_compat_fallback.py  test_config_loading.py  test_coverage_checkers_comprehensive.py  test_coverage_edge_cases.py  test_coverage_edge_cases_extended.py  test_coverage_negative_control.py  test_github_format.py  test_loc_cap.py  test_loc_cap_test_exemption.py  test_noqa.py  test_noqa_r002.py  test_r001_dict_str_any.py  test_r001_strict_collections.py  test_r002_annotated_constants.py  test_r002_configurable_threshold.py  test_r002_inline_dict.py  test_r002_justification.py  test_r002_multiple_dataclass_regression.py  test_r002_serializer_exemption.py  test_r002_tag_separator_format.py  test_r003_canonical.py  test_r003_dataclass_trio.py  test_r003_strict_relaxed.py  test_r004_auto_detect.py  test_r004_module_facade.py  test_r005_validator_pattern.py  test_r006_any.py  test_r007_fixtures.py  test_r008_test_functions.py  test_r009_module_functions.py  test_r010_legacy_typing.py  test_r011_raise_literals.py  test_service_test_exemption.py  test_suppression_surface.py
strict_module/tests/fixtures/bad/: r001_bad_kwarg_bare_collection.py  r001_bad_param.py  r001_bad_return.py  r001_bad_vararg_bare_collection.py  r002_bad_dict_max_tags_exceeded.py  r002_bad_dict_no_justification.py  r002_bad_inline.py  r003_bad_dataclass.py  r006_bad_kwarg_any.py  r006_bad_vararg_any.py  r010_legacy_typing_abc.py  r011_raise_literal_message.py  test_r007_bad_fixtures.py  test_r007_fixture_with_call.py
strict_module/tests/fixtures/good/: r001_good_basic.py  r002_good_dict.py  r003_good_dataclass.py  r004_good_facade.py  r009_allowed_entry_points.py  r011_const_reference_raise.py
strict_rules/: __init__.py  rules_client.py  rules_objects.py
tests/: test_baseline_ratchet.py  test_compat_fallback.py  test_config_loading.py  test_github_format.py  test_loc_cap_test_exemption.py  test_r001_dict_str_any.py  test_r001_strict_collections.py  test_r002_configurable_threshold.py  test_r002_inline_dict.py  test_r002_justification.py  test_r002_multiple_dataclass_regression.py  test_r002_serializer_exemption.py  test_r003_canonical.py  test_r003_dataclass_trio.py  test_r004_auto_detect.py  test_r004_module_facade.py  test_r006_any.py  test_r007_fixtures.py  test_service_test_exemption.py
tests/fixtures/bad/: r004_bad_facade.py  test_r008_bad_bare_test_functions.py
tests/fixtures/good/: r001_good_basic.py  r002_good_serializer.py  r004_good_facade.py  r005_good_validator.py  test_r008_good_test_class.py
