[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strict-suite"
dynamic = ["version"]
description = "Consolidated strict Python linting and static analysis tools — AST-based DTO discipline, facade-ban enforcement, and complexity metrics."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "James Ekhator" }]
requires-python = ">=3.10"
dependencies = ["tomli>=1.1.0; python_version < '3.11'"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["linter", "ast", "dto", "dataclass", "code-quality", "static-analysis", "strict"]

[project.urls]
Homepage = "https://pypi.org/project/strict-suite/"
Repository = "https://github.com/jekhator/strict-suite"
Issues = "https://github.com/jekhator/strict-suite/issues"
Changelog = "https://github.com/jekhator/strict-suite/blob/main/CHANGELOG.md"

[project.scripts]
strict-module = "strict_module.cli:main"
dto-strict = "strict_module.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["strict_module"]

[tool.hatch.version]
path = "strict_module/config/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["strict_module"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.strict-module]
service_paths = ["apps/*/services/*.py", "**/services/*.py"]
dto_paths = ["**/dtos.py", "**/dtos/*.py"]
exception_tags = [
    "facade — celery schedule",
    "FRAMEWORK"
]
disabled_rules = []
severity_overrides = {}

[tool.pyright]
venvPath = "."
venv = ".venv"
