[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strict-suite"
dynamic = ["version"]
description = "Consolidated strict Python linting and static analysis tools - AST-based DTO discipline, facade-ban enforcement, and complexity metrics."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "James Ekhator" }]
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["linter", "ast", "dto", "dataclass", "code-quality", "static-analysis", "strict"]

[project.urls]
Homepage = "https://pypi.org/project/strict-suite/"
Repository = "https://github.com/jekhator/strict-suite"
Issues = "https://github.com/jekhator/strict-suite/issues"
Changelog = "https://github.com/jekhator/strict-suite/blob/main/CHANGELOG.md"

[project.scripts]
strict-module = "strict_module.cli:main"
dto-strict = "strict_module.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["strict_checkers", "strict_config", "strict_inspection", "strict_linter", "strict_loc_cap", "strict_rules", "strict_module"]
exclude = [
    "*/tests",
    "*/fixtures",
]

[tool.hatch.version]
path = "strict_config/_version.py"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["strict_checkers/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["strict_checkers", "strict_config", "strict_inspection", "strict_linter", "strict_loc_cap", "strict_rules", "strict_module"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
target-version = "py311"
extend-exclude = ["strict_checkers/tests/fixtures/bad/"]

[tool.ruff.lint]
extend-select = ["I", "TID252", "PLC0414", "UP035"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["strict_checkers", "strict_config", "strict_inspection", "strict_linter", "strict_loc_cap", "strict_rules", "strict_module"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.strict-module]
paths = ["strict_checkers/", "strict_config/", "strict_inspection/", "strict_linter/", "strict_loc_cap/", "strict_rules/", "strict_module/"]
service_paths = ["apps/*/services/*.py", "**/services/*.py"]
dto_paths = ["**/dtos.py", "**/dtos/*.py"]
exception_tags = [
    "facade - celery schedule",
    "FRAMEWORK"
]
disabled_rules = []
severity_overrides = {}
# Note: strict_checkers/tests/fixtures/bad/*.py intentionally contain violations
# for use as test corpus. These files are not linted by CI; see setup.cfg.

[tool.strict-module.loc-cap]
hard_cap = 300
soft_target = 200

[tool.pyright]
venvPath = "."
venv = ".venv"
